# server

./: .gitignore  CMakeLists.txt  LICENSE
src/: .gitignore  CMakeLists.txt  help.c  info.c  info.h  main.cpp  main.out  term_handler.c  term_handler.h  version.c
src/logging/: color.cpp  color.h  logger.cpp  logger.h
src/workmgr/: worker.hpp  workmgr.hpp
